2013-07-30  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a migration/cmpplotv5v6 batch script and improving the accuracy measure definition.

2013-07-29  Andy Buckley  <andy.buckley@cern.ch>

	* Changing the data format to list PDF Q knot values rather than Q2, for readability.

	* Fixing creategrids to respect flavour thresholds and subgrids with a --subgrids flag.

2013-07-12  Andy Buckley  <andy.buckley@cern.ch>

	* Version number bump and tag as 6.0.0b3. Nearly ready for stable release!

	* Renaming LambdaX config flags to AlphaS_LambdaX, since their use is alpha_s-specific.

2013-07-10  Andy Buckley  <andy.buckley@cern.ch>

	* Adding --top flag to creategrids, for dumping the 13-flavour NNPDF grids.

	* Adding dumping of alpha_s values to dumpv5v6. Some apparent alpha_s ipol problems for CTEQ6L1.

2013-07-08  Andy Buckley  <andy.buckley@cern.ch>

	* Adding factory methods for making AlphaS objects direct from set names / member numbers.

	* Adding/updating NumFlavors + FlavorScheme metadata flags and add TODOs to respect them.

	* Updated ipol alpha_s solver to operate in log space: smoother behaviour now.

	* Karl made ODE and interpolation alpha_s solvers work nicely.

	* Adding fallback/default-return variants of the Info get_entry and get_entry_as methods.

2013-07-05  Andy Buckley  <andy.buckley@cern.ch>

	* Many improvements to the creategrids migration script.

	* Populating many of the for-migration PDF entries in pdfsets.index.

	* Changing .lha data file extension to .dat to avoid clashing with LHA archive format.

2013-07-04  Andy Buckley  <andy.buckley@cern.ch>

	* Write out AlphaS_Ipol info from creategrids if possible.

	* Use a more accurate MZ in lhapdf.conf and creategrids.

	* Add handling of MinLHAPDFVersion and DataVersion flags if present.

	* Fix LHAPDF_VERSION_CODE to be an int rather than string.

	* Renaming Info::metadata() to Info::get_entry(), plus Info::get_entry_as(), etc.

2013-07-03  Andy Buckley  <andy.buckley@cern.ch>
